<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/red"
	        android:textStyle="bold"
	        android:text="@string/troubleshoot_explanation_title" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:textColor="@color/green"
	        android:text="@string/troubleshoot_explanation_content" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/red"
	        android:textStyle="bold"
	        android:text="@string/troubleshoot_solution_title" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:textColor="@color/green"
	        android:text="@string/troubleshoot_solution_content" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/yellow"
	        android:textStyle="bold"
	        android:text="@string/troubleshoot_suggestion" />
	    
	    <Button
	        android:id="@+id/btnContactAuthor"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textColor="@color/dark_cyan"
	        android:textStyle="bold"
	        android:text="@string/about_contact_author" />
	        
    </LinearLayout>
</ScrollView>
